kubernetes/apps/media/external-services/plex/service.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: plex
  labels:
    kubernetes.io/service-name: plex
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.2.41
ports:
  - name: web
    port: 32400
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
    - name: web
      port: &webport 32400
      targetPort: *webport
      protocol: TCP
