kubernetes/apps/media/external-services/plex/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/client-body-buffer-size: "850m"
    nginx.ingress.kubernetes.io/proxy-body-size: "850m"
  name: plex2
spec:
  ingressClassName: external
  rules:
    - host: &webhost "plex2.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex2
                port:
                  name: web
  tls:
    - hosts:
        - *webhost
